--- a/visualize/index.css
+++ b/visualize/index.css
@@ -1,5 +1,9 @@
+/*
+https://www.google.com/imgres?imgurl=https%3A%2F%2Fimages.unsplash.com%2Fphoto-1457449940276-e8deed18bfff%3Fixlib%3Drb-1.2.1%26ixid%3DeyJhcHBfaWQiOjEyMDd9%26w%3D1000%26q%3D80&imgrefurl=https%3A%2F%2Funsplash.com%2Fs%2Fphotos%2Fprofile&tbnid=GzwOS5QymHIYNM&vet=10CBkQMyh0ahcKEwiI3NqF7qbrAhUAAAAAHQAAAAAQAg..i&docid=b5C9ViMmmhpq-M&w=1000&h=667&q=profile%20pic&client=ubuntu&ved=0CBkQMyh0ahcKEwiI3NqF7qbrAhUAAAAAHQAAAAAQAg
+*/
+
+
 @charset "UTF-8";
-@import url(font-awesome.min.css);
 @import url("http://fonts.googleapis.com/css?family=Source+Sans+Pro:200");
 
 body{
@@ -8,6 +12,10 @@ body{
   font-size: 13pt;
   font-weight: 200;
   line-height: 1.65;
+  background: #659999;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to top, #f4791f, #659999);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to top, #f4791f, #659999); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 
 .container{
@@ -20,4 +28,71 @@ body{
   opacity: 1;
   filter: none;
   transition: opacity 1s ease, filter 1s ease ;
+}
+
+.header{
+  display: block;
+  text-align: center;
+  padding-top: 5rem;
+}
+
+.header h1{
+  color: rgba(255, 255, 255, 0.65);
+}
+.avatar {
+  display: inline-block;
+  width: 10rem;
+  height: 10rem;
+  border-radius: 100%;
+  margin: 0 0 2em 0;
+  padding: 0.5em;
+  border: solid 1px rgba(255, 255, 255, 0.25);
+  background-color: rgba(255, 255, 255, 0.075);
+
+}
+
+.avatar img {
+  border-radius: 100%;
+  display: block;
+  width: 10em;
+
+}
+
+.social_icons {
+  cursor: default;
+  list-style: none;
+  padding-left: 0;
+  margin: 0 0 2em 0;
+}
+
+.social_icons li {
+  display: inline-block;
+  padding: 0 1em 0 0;
+}
+
+.icon {
+  -moz-transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  border-radius: 100%;
+  display: inline-block;
+  padding: 0.5em;
+  border: solid 1px rgba(255, 255, 255, 0.25);
+  background-color: rgba(255, 255, 255, 0.075);
+  text-align: center;
+  vertical-align: middle;
+}
+
+.icon i {
+  color: #e9e5ec94;
+  display: inline-block;
+  width: 1.25em;
+  height: 1.25em;
+  line-height: 1.25em;
+  font-size: 2em;
+}
+
+.icon > .label {
+  display: none;
 }
