--- a/visualize/index.css
+++ b/visualize/index.css
@@ -21,7 +21,7 @@ body{
 .container{
   display: block;
   position: relative;
-  max-width: 85%;
+  max-width: 90%;
   height: auto;
   padding: 24px;
   margin: auto;
@@ -55,7 +55,6 @@ body{
   border-radius: 100%;
   display: block;
   width: 10em;
-
 }
 
 .social_icons {
@@ -95,4 +94,51 @@ body{
 
 .icon > .label {
   display: none;
+}
+
+.main {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.thumbnails{
+  flex: 25%;
+  max-width: 22%;
+  padding: 1rem;
+}
+
+.thumbnails a {
+  -moz-transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  border-bottom: none;
+  display: block;
+  width: 100%;
+  margin: 0 0 2em 0;
+  text-align: center;
+  border-radius: 4px;
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
+  background-color: rgba(255, 255, 255, 0.075);
+  cursor: pointer;
+  outline: 0;
+  overflow: hidden;
+}
+
+.thumbnails a:hover {
+  background-color: rgba(255, 255, 255, 0.25);
+  box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25), 0 0 0.5em 0 #FF6382;
+}
+
+.thumbnails a img {
+  width: 100%;
+  vertical-align: middle;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.thumbnails a h3 {
+  margin: 1em;
 }
