improve Iphone responsive

--- a/visualize/index.css
+++ b/visualize/index.css
@@ -144,6 +144,21 @@ body{
   margin: 1em;
 }
 
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {}
+
 @media (max-width: 800px) {
   .thumbnails {
     flex: 50%;
@@ -155,5 +170,14 @@ body{
   .thumbnails {
     flex: 100%;
     max-width: 100%;
+    padding: 0;
+  }
+
+  .header{
+    padding: 0;
+  }
+
+  .header h1{
+    padding: 0;
   }
 }
