--- a/visualize/index.css
+++ b/visualize/index.css
@@ -154,7 +154,16 @@ body{
 @media only screen and (min-width: 768px) {}
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {}
+@media only screen and (min-width: 992px) {
+  .thumbnails {
+    flex: 40%;
+    max-width: 50%;
+  }
+  .thumbnails a h3 {
+      margin: 1em;
+      font-size: 2rem;
+  }
+}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {}
@@ -163,6 +172,10 @@ body{
   .thumbnails {
     flex: 40%;
     max-width: 50%;
+  }
+  .thumbnails a h3 {
+      margin: 1em;
+      font-size: 1.4rem;
   }
 }
 
