--- a/visualize/index.css
+++ b/visualize/index.css
@@ -144,15 +144,6 @@ body{
   margin: 1em;
 }
 
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {}
-
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
   .thumbnails {
@@ -164,9 +155,6 @@ body{
       font-size: 2rem;
   }
 }
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {}
 
 @media (max-width: 800px) {
   .thumbnails {
@@ -192,5 +180,18 @@ body{
 
   .header h1{
     padding: 0;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  .thumbnails{
+    flex: 25%;
+    max-width: 22%;
+    padding: 1rem;
+  }
+  .thumbnails a h3 {
+      margin: 1em;
+      font-size: 1rem;
   }
 }
