--- a/forty/index.css
+++ b/forty/index.css
@@ -174,12 +174,6 @@ a:hover {
   z-index: 1;
 }
 
-.inner{
-  z-index: 2;
-  padding: 8rem 8rem;
-  position: relative;
-}
-
 .inner_header{
   margin-bottom: 2rem;
 }
@@ -391,6 +385,8 @@ a:hover {
   padding-right: 1rem;
   padding-top: 4rem;
   border-right: solid 1px rgba(212, 212, 255, 0.1);
+  position: relative;
+  width: 55%;
 }
 
 .contact_form{
@@ -443,11 +439,6 @@ input:focus, textarea:focus{
   width: 95%;
   height: 12rem;
   padding: 1rem ;
-}
-
-.contact_form_container{
-  position: relative;
-  width: 55%;
 }
 
 .submit{
@@ -609,4 +600,42 @@ input:focus, textarea:focus{
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {}
+@media only screen and (min-width: 1200px) {
+  .inner{
+    z-index: 2;
+    padding: 8rem 8rem;
+    position: relative;
+  }
+  .contact_form_container{
+    padding-left: 8rem;
+    padding-right: 1rem;
+    padding-top: 4rem;
+    border-right: solid 1px rgba(212, 212, 255, 0.1);
+    width: 55%;
+  }
+  .contact_info{
+    position: relative;
+    width: 45%;
+  }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1441px) {
+  .header{
+    font-size: 2rem;
+    height: 6rem;
+  }
+
+  .header .logo{
+    font-size: 1.5rem;
+  }
+
+  .header nav a {
+    font-size: 1.5rem;
+  }
+
+  .inner_header h1 {
+    font-size: 5rem;
+  } 
+
+}
