--- a/spectral/css/index.css
+++ b/spectral/css/index.css
@@ -8,6 +8,182 @@ html {
 
 body {
   font-family: "Montserrat", sans-serif;
-  margin: 0;
   height: 100%;
+  color: #fff;
 }
+
+body, h1, ul{
+  margin: 0;
+  padding: 0;
+}
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
+
+ul{
+  list-style: none;
+}
+
+img{
+  width: 100%;
+  height: auto;
+}
+
+
+
+
+
+.banner{
+  position: relative;
+}
+
+.header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #2E3842;
+  z-index: 10;
+}
+
+.header__logo{
+  font-size: 1.5rem;
+}
+
+.header__title{
+  font-size: 1.5rem;
+  padding-left: 2rem;
+  letter-spacing: .50rem;
+}
+
+.banner{
+  position: relative;
+  height: 70vh;
+  background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../img/banner.jpg);
+  background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../img/banner.jpg);
+  background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(../img/banner.jpg);
+  background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../img/banner.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.banner::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #2e3842;
+  opacity: 0;
+}
+
+.inner{}
+
+.banner__inner h2{
+  font-size: 1.3rem;
+  letter-spacing: .3rem;
+}
+
+.banner__inner h2::before{
+  content: '';
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  margin-bottom: 1rem;
+}
+
+.banner__inner h2::after{
+  content: '';
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 2px;
+  background: #fff;
+  margin-top: 1rem;
+}
+
+.banner__inner p{
+  font-size: .9rem;
+  letter-spacing: 0.225em;
+  margin-top: 1rem;
+  line-height: 1.5rem;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.btn--primary{
+  display: block;
+  background-color: #ed4933;
+  padding: 1rem 3rem;
+  border-radius: 5px;
+}
+
+.section-one{
+  background-color: #21b2a6;
+  text-align: center;
+}
+
+.section-one h2{
+  font-size: 1.1rem;
+  line-height: 1.65em;
+  font-weight: 800;
+  letter-spacing: 0.225em;
+  padding-bottom: .7rem;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.125);
+}
+
+.section-one p{
+  color: #c8ece9;
+}
+
+.section-one__icons li{
+  display: inline-block;
+  padding: 0 1rem;
+}
+
+.section-one__icons i{
+  font-size: 1.5rem;
+  border: 2px solid rgba(0, 0, 0, 0.125);
+  border-radius: 3px;
+  padding: .5rem;
+}
+
+.section-one__icons i::before{
+  display: inline-block;
+}
+
+.section-two__spotlight{
+  background-color: #2E3842;
+}
+
+.section-two__spotlight__image{
+  width: 100%;
+  height: auto;
+}
+
+.section-two__spotlight__content{
+  text-align: center;
+}
+
+.section-three{
+  background-color: #505393;
+  color: #d3d4e4;
+}
+
+.section-three__content{
+
+}
+
