--- a/spectral/css/utilities.css
+++ b/spectral/css/utilities.css
@@ -8,3 +8,56 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.uppercase{
+  text-transform: uppercase;
+}
+
+.p-r--1{
+  padding-right: 1rem;
+}
+
+.p-6-3{
+  padding: 6rem 3rem;
+}
+
+.p-3-3{
+  padding: 3rem 3rem;
+}
+
+.p-1-3{
+  padding: 1rem 3rem;
+}
+
+.p-3-2{
+  padding: 3rem 2rem;
+}
+
+.p-2-0{
+  padding: 2rem 0;
+}
+
+.p-r-1{
+  padding-right: 1rem;
+}
+
+.p-0-1-0-0{
+  padding-right: 1rem;
+}
+
+.p-0-3{
+  padding: 0 3rem;
+}
+
+.p-1-3{
+  padding: 1rem 3rem;
+}
+
+.p-1-0{
+  padding: 1rem 0;
+}
+
+.p-1-2-3-4{
+  padding:1rem 2rem 3rem 4rem;
+}
+
