--- a/spectral/css/index.css
+++ b/spectral/css/index.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Open Sans", Helvetica, sans-serif;
   height: 100%;
   color: #fff;
 }
@@ -73,8 +73,8 @@ p{
 }
 
 .header__title{
-  font-size: 1.5rem;
-  padding-left: 2rem;
+  font-size: 1rem;
+  padding-left: 1rem;
   letter-spacing: .50rem;
 }
 
@@ -103,6 +103,11 @@ p{
   width: 100%;
   background-color: #2e3842;
   opacity: 0;
+}
+
+.banner p{
+  font-size: 16px;
+  letter-spacing: .2rem;
 }
 
 .banner .inner h2::before{
@@ -215,7 +220,7 @@ p{
 }
 
 .banner--mini{
-  height: 50vh;
+  height: 60vh;
 }
 
 .footer{
