--- a/spectral/css/index.css
+++ b/spectral/css/index.css
@@ -240,4 +240,45 @@ p{
 }
 
 
+.sidenav {
+  height: 100%; 
+  width: 0; 
+  position: fixed;
+  z-index: 11;
+  top: 0;
+  right: 0;
+  background-color: #21b2a6; 
+  overflow-x: hidden;
+  padding-top: 60px; 
+  transition: 0.5s; 
+}
+
+.sidenav li{
+  border-top: solid 1px rgba(0, 0, 0, 0.125);
+  margin: 0.5em 0 0 0;
+  padding: 0.5em 0 0 0;
+}
+
+.sidenav li:first-child{
+  border-top: 0;
+}
+
+.sidenav a {
+  padding: 16px 8px 16px 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  letter-spacing: 0.225em;
+  color: #fff;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidenav .closebtn {
+  position: absolute;
+  top: -16px;
+  right: -8px;
+  font-size: 36px;
+  transition: 0.3s;
+}
 
