--- a/spectral/css/responsive.css
+++ b/spectral/css/responsive.css
@@ -9,7 +9,7 @@
   p{
     font-size: 1.2rem;
   }
-  
+
   .banner{
     height: 60vh;
     padding: 14rem 6rem;
@@ -72,7 +72,143 @@
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {}
+@media only screen and (min-width: 992px) {
+  p{
+    font-size: 1.8rem;
+    line-height: 2.5rem;
+  }
+
+  h2{
+    font-size: 1.75rem;
+    line-height: 3rem;
+  }
+
+  .header{
+    height: 4rem;
+  }
+
+  .header__title{
+    font-size: 1.8rem;
+  }
+
+  .header__logo{
+    padding-right: 2rem;
+    font-size: 2rem;
+  }
+  
+  .banner{
+    height: 100vh;
+    padding: 14rem 6rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .inner{
+    padding: 0;
+  }
+
+  .banner h2{
+    padding: 0 10rem;
+  }
+
+  .banner p {
+    font-size: 24px;
+    padding: 1rem 5rem;
+  }
+
+  .section-one{
+    padding: 3rem 6rem;
+  }
+
+  .section-one p{
+    padding: 0 3rem;
+  }
+
+  .section-one__icons{
+    padding-bottom: 1rem;
+  }
+
+  .section-one__icons li{
+    padding: 0 3rem;
+  }
+
+  .section-one__icons i {
+    font-size: 3rem;
+    border: 4px solid rgba(0, 0, 0, 0.125);
+    border-radius: 5px;
+    padding: 1rem;
+  } 
+
+  .section-two__spotlight{
+    display: flex;
+    padding: 0;
+    align-items: center;
+  }
+
+  .section-two__spotlight:nth-child(2){
+    flex-direction: row-reverse;
+    background-color: #242c33 
+  }
+
+  .section-two__spotlight__content{
+    text-align: left;
+    padding: 0 3rem;
+  }
+
+  .section-two__spotlight__content h2{
+   font-size: 1.4rem;
+  }
+
+  .section-two__spotlight__content p{
+    font-size: 1.5rem;
+    margin-bottom: 0;
+  }
+
+  .section-three {
+    padding: 1rem 1rem;
+}
+
+  .section-three__header{
+    padding: 1rem ;
+  }
+
+  .section-three__header p{
+    padding: 0 8rem;
+  }
+
+  .section-three__content {
+    display: inline-block;
+    width: 49%;
+    padding: 2rem 0;
+    border: 0;
+    text-align: center;
+  }
+
+  .section-three__content i {
+    font-size: 2rem;
+  }
+
+  .section-three__content h3 {
+    display: inline-block;
+    font-size: 1.5rem;
+    margin-left: 1rem;
+  }
+
+  .section-three__content p {
+    padding: 1rem;
+    font-size: 1.5rem;
+  }
+
+  .banner--mini{
+    height: 50vh;
+    padding: 10rem 6rem 6rem 6rem ;
+  }
+
+ .btn--primary, .btn--secondary{
+    margin: 0 10rem ;
+  }
+}
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {}
