--- a/spectral/css/index.css
+++ b/spectral/css/index.css
@@ -254,6 +254,10 @@ p{
   transition: 0.5s; 
 }
 
+.sidenav-width{
+  width: 70%;
+}
+
 .sidenav li{
   border-top: solid 1px rgba(0, 0, 0, 0.125);
   margin: 0.5em 0 0 0;
