--- a/spectral/css/responsive.css
+++ b/spectral/css/responsive.css
@@ -220,7 +220,7 @@
     width: 30%;
   }
   p{
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     line-height: 2.5rem;
   }
 
@@ -314,6 +314,7 @@
 
   .section-two__spotlight__content p{
     margin-bottom: 0;
+    font-size: 1.1rem;
   }
 
   .section-three {
@@ -375,8 +376,11 @@
   }
 
   .section-three__content p {
-    padding: 1rem 2rem;
-    font-size: 1.2rem;
+    padding: 1rem 1.2rem;
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+    padding-left: 0;
+    margin: 0;
   }
 
   .banner--mini{
