move var in _config.scss

--- a/arch/scss/_config.scss
+++ b/arch/scss/_config.scss
@@ -1,4 +1,13 @@
+$font-family: "Open Sans", Helvetica, sans-serif;
 
+$brand-blue: #2C3E50;
+$brand-green: #16A085;
+$black: #111;
+$white: #FFF;
+
+$card-size: 350px;
+
+$easeOutQuad: cubic-bezier(0.250, 0.460, 0.450, 0.940);
 
 
 
