--- a/arch/scss/style.scss
+++ b/arch/scss/style.scss
@@ -38,6 +38,7 @@ img {
 .container{
   position: relative;
   display: flex;
+  flex-wrap: wrap;
   height: 100vh;
   align-items: center;
   justify-content: center;
@@ -54,7 +55,7 @@ a {
   background-image: linear-gradient(0deg, $brand-blue 0%, $brand-green 100%);  
   width: $card-size;
   height: $card-size;
-  margin: 20px;
+  margin: 5px;
   position: relative;
   overflow: hidden;
 }
