change white color var

--- a/arch/scss/_config.scss
+++ b/arch/scss/_config.scss
@@ -3,7 +3,7 @@ $font-family: "Open Sans", Helvetica, sans-serif;
 $brand-blue: #2C3E50;
 $brand-green: #16A085;
 $black: #111;
-$white: #FFF;
+$white: #ECF0F1;
 
 $card-size: 345px;
 
