--- a/arch/scss/style.scss
+++ b/arch/scss/style.scss
@@ -52,6 +52,14 @@ a {
   }
 }
 
+.header{
+  margin: 2rem .8rem;
+  
+  h1{
+    color: #303030;
+  }
+}
+
 .card {
   background-image: linear-gradient(0deg, $brand-blue 0%, $brand-green 100%);  
   width: $card-size;
@@ -76,7 +84,7 @@ a {
     content: '';
     height: 1px;
     width: 30px;
-    background-color: #fff;
+    background-color: $white;
     position: relative;
     display: block;
     margin-bottom: 10px;
@@ -88,7 +96,7 @@ a {
 }
 
 .card-text {
-  color: #FFF;
+  color: $white;
   background-color: rgba($black, .65);
   position: absolute;
   padding: 20px;
@@ -109,7 +117,7 @@ a {
 .card a {
   &:hover {
     .card-text {
-      background-color: rgba($black, .86);
+      background-color: rgba($black, .16);
     }
     .card-meta {
       &:before {
