--- a/arch/scss/_config.scss
+++ b/arch/scss/_config.scss
@@ -6,7 +6,7 @@ $black: #111;
 $white: #ECF0F1;
 
 $card-size: 345px;
-
+$card-margin: 6px;
 $easeOutQuad: cubic-bezier(0.250, 0.460, 0.450, 0.940);
 
 
