--- a/arch/scss/style.scss
+++ b/arch/scss/style.scss
@@ -64,7 +64,7 @@ a {
   background-image: linear-gradient(0deg, $brand-blue 0%, $brand-green 100%);  
   width: $card-size;
   height: $card-size;
-  margin: 6px;
+  margin: $card-margin;
   position: relative;
   overflow: hidden;
 }
