--- a/arch/scss/style.scss
+++ b/arch/scss/style.scss
@@ -133,3 +133,17 @@ a {
     }    
   }  
 }
+
+@media only screen and (min-width: 768px) {
+  .header {
+    margin: 2rem 2rem;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .header {
+    margin: 2rem 10rem;
+  }
+}
+
+@media only screen and (min-width: 1200px) {}
