--- a/spectral/css/responsive.css
+++ b/spectral/css/responsive.css
@@ -138,8 +138,6 @@
 
   .section-one__icons i {
     font-size: 3rem;
-    border: 4px solid rgba(0, 0, 0, 0.125);
-    border-radius: 5px;
     padding: 1rem;
   } 
 
@@ -323,7 +321,10 @@
   }
 
   .section-three__header p{
-    padding: 0 16rem;
+    position: relative;
+    max-width: 50%;
+    margin: auto;
+    padding: 1rem 0 0 0;
   }
 
   .section-three__content {
@@ -332,7 +333,7 @@
     padding: 2rem 0 2rem 2rem;
     border: 0;
     text-align: left;
-    margin-top: 6px;
+    margin-top: 3rem;
   }
 
   .section-three__content:nth-child(2){
@@ -374,6 +375,10 @@
 
   .banner--mini{
     height: 80vh;
-    padding: 10rem 6rem 6rem 6rem ;
+    padding: 10rem 0 ;
+  }
+
+  .banner--mini p {
+    max-width: 100%;
   }
 }
