--- a/spectral/css/responsive.css
+++ b/spectral/css/responsive.css
@@ -206,6 +206,10 @@
     height: 50vh;
     padding: 10rem 6rem 6rem 6rem ;
   }
+
+  .more{
+    display: block;
+  }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
@@ -380,5 +384,9 @@
 
   .banner--mini p {
     max-width: 100%;
+  }
+
+  .more{
+    display: block;
   }
 }
