--- a/spectral/css/index.css
+++ b/spectral/css/index.css
@@ -4,6 +4,7 @@
 
 html {
   height: 100%;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -66,15 +67,11 @@ p{
   justify-content: space-between;
   background-color: #2E3842;
   z-index: 10;
-  transition: all linear 1s;
+  transition: all linear 200ms;
 }
 
 .alt{
   background: transparent;
-}
-
-.alt-title{
-  opacity: 0;
 }
 
 .header__logo{
@@ -87,6 +84,10 @@ p{
   padding-left: 1rem;
   letter-spacing: .50rem;
   opacity: 1;
+}
+
+.alt-title{
+  opacity: 0;
 }
 
 .banner{
