--- a/spectral/css/index.css
+++ b/spectral/css/index.css
@@ -117,6 +117,7 @@ p{
   transition: transform 0.5s ease, opacity 0.5s ease;
   position: relative;
   display: inline-block;
+  padding: 1rem;
 }
 
 .banner h2:before, .banner h2:after {
@@ -199,6 +200,7 @@ p{
   text-transform: uppercase;
   letter-spacing: 4px;
   cursor: pointer;
+  margin: 1rem;
 }
 
 .btn--primary:hover{
@@ -282,6 +284,8 @@ p{
 }
 
 .section-three__header h2{
+  display: inline-block;
+  color: #fff;
   padding-bottom: 1rem;
   border-bottom: 2px solid rgba(0, 0, 0, 0.125);
 }
