--- a/spectral/css/index.css
+++ b/spectral/css/index.css
@@ -3,13 +3,11 @@
 }
 
 html {
-  height: 100%;
   scroll-behavior: smooth;
 }
 
 body {
   font-family: "Open Sans", Helvetica, sans-serif;
-  height: 100%;
   color: #fff;
 }
 
@@ -104,6 +102,7 @@ p{
   flex-direction: column;
   text-align: center;
   padding: 6rem 3rem;
+  min-height: 35em;
 }
 
 .banner h2{
@@ -200,7 +199,7 @@ p{
   text-transform: uppercase;
   letter-spacing: 4px;
   cursor: pointer;
-  margin: 1rem;
+   margin: 1rem;
 }
 
 .btn--primary:hover{
