--- a/arch/scss/style.scss
+++ b/arch/scss/style.scss
@@ -146,4 +146,8 @@ a {
   }
 }
 
-@media only screen and (min-width: 1200px) {}
+@media only screen and (min-width: 1200px) {
+  .header{
+    margin: 2rem 1rem;
+  }
+}
